--- a/index.html
+++ b/index.html
@@ -2530,7 +2530,7 @@ const tableData = periodKeys.map(p => {
       <div className={`${darkMode ? 'bg-gray-800 border-gray-700' : 'bg-white'} rounded-lg shadow-lg overflow-hidden border`}>
         {/* Topbar */}
         <div className={`${darkMode ? 'bg-blue-700' : 'bg-blue-600'} text-white px-4 py-3 font-bold`}>
-          {team === 'home' ? '' : ''} {name}
+          {name}
         </div>
 
         {/* Content */}
@@ -2565,7 +2565,7 @@ const tableData = periodKeys.map(p => {
 
           {/* Saves Section */}
           <div className={`${darkMode ? 'bg-blue-900/30 border border-blue-700' : 'bg-blue-50'} rounded-lg p-4 mb-4`}>
-            <div className={`text-xs font-semibold ${darkMode ? 'text-blue-300' : 'text-blue-700'} mb-3`}>SAVES</div>
+            <div className={`text-xs font-semibold ${darkMode ? 'text-gray-400' : 'text-gray-600'} mb-3`}>SAVES</div>
             <div className="flex items-center justify-center gap-3">
               <button 
                 onClick={() => updateStat(team, 'Saves', -1)} 
@@ -2586,7 +2586,7 @@ const tableData = periodKeys.map(p => {
                 +
               </button>
             </div>
-            <div className={`text-xs text-center mt-2 ${darkMode ? 'text-blue-400' : 'text-blue-600'}`}>
+            <div className={`text-xs text-center mt-2 ${darkMode ? 'text-gray-400' : 'text-gray-600'}`}>
               ({Object.keys(periodStats).sort((a,b)=>parseInt(a)-parseInt(b)).map((p,i,arr) => <span key={p}>{periodStats[p][team+'Saves']}{i<arr.length-1?'-':''}</span>)})
             </div>
           </div>
@@ -2683,8 +2683,8 @@ const tableData = periodKeys.map(p => {
         </div>
       </div>
 
-      <div className="max-w-6xl mx-auto p-4">
-        <div className="grid grid-cols-1 md:grid-cols-2 gap-4">
+      <div className="max-w-6xl mx-auto p-2 sm:p-4">
+        <div className="grid grid-cols-2 gap-2 sm:gap-4">
           {renderGoalieCard(homeTeam, homeName_, homeGoals, homeSaves)}
           {renderGoalieCard(awayTeam, awayName_, awayGoals, awaySaves)}
         </div>
