--- a/index.html
+++ b/index.html
@@ -2065,7 +2065,7 @@ return(
       {/* Default roster hint */}
       {addPlayerTeam === 'home' && defaultHomeRoster && addPlayerNumbers.length === 1 && addPlayerNumbers[0] === '' && Object.keys(playerStats.home?.players || {}).length === 0 && (
         <div className={`mb-3 p-3 rounded ${darkMode ? 'bg-blue-900 bg-opacity-30 border border-blue-700' : 'bg-blue-50 border border-blue-200'}`}>
-          <p className="text-xs mb-2 opacity-75">Default home roster:</p>
+          <p className="text-xs mb-2 opacity-75">Default home roster (from settings):</p>
           <button
             onClick={() => {
               const parsed = parsePlayerInput(defaultHomeRoster);
@@ -2906,7 +2906,7 @@ return(
           }`}
         >
           <span>Sign Out</span>
-          <span>🚪</span>
+          <span>🔓</span>
         </button>
       )}
 
@@ -2980,7 +2980,7 @@ return(
           <div className={`text-3xl font-bold w-16 text-center ${sparkleStats[`${tm.team}Score${currentPeriod}`]?'sparkle':''}`}>{currentPeriodScore}</div>
           <button onClick={()=>updateStat(tm.team,'Score',1)} disabled={matchEnded||isViewer} className="bg-white bg-opacity-20 w-10 h-10 rounded flex items-center justify-center text-xl font-bold hover:bg-opacity-30">+</button>
         </div>
-       <div className="text-xs opacity-75 text-center">By period: ({Object.keys(periodStats).sort((a,b)=>parseInt(a)-parseInt(b)).map((p,i,arr)=><span key={p} className={parseInt(p)===currentPeriod?'font-bold underline':''}>{periodStats[p][tm.team+'Score']}{i<arr.length-1?'-':''}</span>)})</div>
+       <div className="text-xs opacity-75 text-center">({Object.keys(periodStats).sort((a,b)=>parseInt(a)-parseInt(b)).map((p,i,arr)=><span key={p} className={parseInt(p)===currentPeriod?'font-bold underline':''}>{periodStats[p][tm.team+'Score']}{i<arr.length-1?'-':''}</span>)})</div>
       </div>
     </div>
     );
@@ -3003,7 +3003,7 @@ return(
           <div className={`text-3xl font-bold w-16 text-center ${sparkleStats[`${tm.team}Saves${currentPeriod}`]?'sparkle':''}`}>{currentPeriodSaves}</div>
           <button onClick={()=>updateStat(tm.team,'Saves',1)} disabled={matchEnded||isViewer} className="bg-white bg-opacity-20 w-10 h-10 rounded flex items-center justify-center text-xl font-bold">+</button>
         </div>
-        <div className="text-xs opacity-75 text-center">By period: ({Object.keys(periodStats).sort((a,b)=>parseInt(a)-parseInt(b)).map((p,i,arr)=><span key={p} className={parseInt(p)===currentPeriod?'font-bold underline':''}>{periodStats[p][tm.team+'Saves']}{i<arr.length-1?'-':''}</span>)})</div>
+        <div className="text-xs opacity-75 text-center">({Object.keys(periodStats).sort((a,b)=>parseInt(a)-parseInt(b)).map((p,i,arr)=><span key={p} className={parseInt(p)===currentPeriod?'font-bold underline':''}>{periodStats[p][tm.team+'Saves']}{i<arr.length-1?'-':''}</span>)})</div>
       </div>
       );
     })}
