--- a/index.html
+++ b/index.html
@@ -2460,7 +2460,10 @@ if(screen==='create')return(
         <div className={`min-h-screen flex items-center justify-center ${darkMode?'bg-gray-900':'bg-gradient-to-br from-blue-50 to-blue-100'}`}>
           <div className="max-w-md w-full p-6">
             <div className={`${darkMode?'bg-gray-800 text-white':'bg-white'} rounded-2xl shadow-2xl p-8`}>
-              <button onClick={()=>setScreen('start')} className={`mb-6 ${darkMode?'text-gray-400':'text-gray-600'}`}>← Back</button>
+              
+<button onClick={()=>setScreen('start')} className={`flex items-center gap-1 text-sm  ${darkMode?'text-gray-400':'text-gray-600'}`}><IconBack />
+  <span>Back</span></button>
+
               <h2 className="text-2xl font-bold mb-6">New Game</h2>
               <div className="space-y-4 mb-6">
                 <div>
