--- a/index.html
+++ b/index.html
@@ -2676,7 +2676,7 @@ if(focusMode&&screen==='game'){
       </div>
 
       {/* Content */}
-      <div className="p-4">
+      <div className="p-2">
         {/* Goalie Toggle */}
         <div className="mb-3 flex gap-1">
           <button
@@ -2707,24 +2707,12 @@ if(focusMode&&screen==='game'){
         <div className={`${darkMode ? 'bg-gray-700/50' : 'bg-gray-50'} rounded-lg p-2 mb-3`}>
           <div className={`text-sm font-semibold ${darkMode ? 'text-gray-400' : 'text-gray-600'} mb-2`}>GOALS</div>
           <div className="flex items-center justify-center gap-3">
-            <button 
-              onClick={() => updateStat(team, 'Score', -1)} 
-              disabled={matchEnded || isViewer}
-              className={`${darkMode ? 'bg-white/10 hover:bg-white/20 text-white' : 'bg-gray-300 hover:bg-gray-400 text-gray-800'} disabled:opacity-50 w-8 h-8 rounded font-semibold transition-colors`}
-            >
-              −
-            </button>
+
             <div className="text-center">
               <div className={`text-sm font-semibold ${darkMode ? 'text-white' : 'text-black'}`}>{periodStats[currentPeriod]?.[team+'Score'] ?? 0}</div>
               <div className={`text-xs ${darkMode ? 'text-gray-400' : 'text-gray-500'}`}>of {goals}</div>
             </div>
-            <button 
-              onClick={() => updateStat(team, 'Score', 1)} 
-              disabled={matchEnded || isViewer}
-              className={`${darkMode ? 'bg-white/10 hover:bg-white/20 text-white' : 'bg-gray-300 hover:bg-gray-400 text-gray-800'} disabled:opacity-50 w-8 h-8 rounded font-semibold transition-colors`}
-            >
-              +
-            </button>
+     
           </div>
           <div className={`text-xs text-center mt-2 ${darkMode ? 'text-gray-400' : 'text-gray-600'}`}>
             ({Object.keys(periodStats).sort((a,b)=>parseInt(a)-parseInt(b)).map((p,i,arr) => <span key={p}>{periodStats[p][team+'Score']}{i<arr.length-1?'-':''}</span>)})
@@ -3317,7 +3305,7 @@ return(
           <div className={`text-4xl font-bold min-w-[3rem] text-center ${sparkleStats[`${tm.team}Score${currentPeriod}`]?'sparkle':''}`}>
             {tm.score}
           </div>
-          <button onClick={()=>updateStat(tm.team,'Score',1)} disabled={matchEnded||isViewer} className="bg-white bg-opacity-20 w-10 h-10 rounded flex items-center justify-center text-xl font-bold hover:bg-opacity-30">+</button>
+          <button onClick={()=>updateStat(tm.team,'Score',1)} disabled={matchEnded||isViewer} className="bg-white bg-opacity-20 w-10 h-10 rounded flex items-center justify-center text-xl font-bold hover:bg-opacity-30">+x</button>
         </div>
         <div className="text-xs opacity-75 text-center">
           ({Object.keys(periodStats).sort((a,b)=>parseInt(a)-parseInt(b)).map((p,i,arr)=><span key={p} className={parseInt(p)===currentPeriod?'font-bold underline':''}>{periodStats[p][tm.team+'Score']}{i<arr.length-1?'-':''}</span>)})
