--- a/index.html
+++ b/index.html
@@ -18,7 +18,9 @@
             @keyframes sparkle{0 %, 100 % { transform: scale(1); opacity: 1 }50%{transform:scale(1.2);opacity:.8}}
             .sparkle{animation:sparkle .6s ease-in-out}
             @keyframes eq-bar{0 %, 100 % { height: 30 %}50%{height:80%}}
-            .eq-bar{animation:eq-bar 0.6s ease-in-out infinite}
+            .eq-bar {
+  animation: eq-bar 0.9s ease-in-out infinite alternate;
+}
             .eq-bar:nth-child(1){animation-delay:0s}
              .eq-bar:nth-child(2){animation-delay:0.15s}
              .eq-bar:nth-child(3){animation-delay:0.3s}
