--- a/index.html
+++ b/index.html
@@ -1929,14 +1929,19 @@ const generateCSV=()=>{
 
       const refSigs = [
   { 
-    name: 'Boarding', 
-    description: 'Right fist striking the open left palm',
-    image: 'images/ref_boarding.png'  
+    name: 'Elbowing', 
+    description: 'Tapping either elbow with the opposite hand',
+    image: 'images/ref_elbowing.png'  
+  },
+  { 
+    name: 'Illegal Hit', 
+    description: 'Hand on opposite chest',
+    image: 'images/ref_illegal_hit.png'  
   },
   { 
     name: 'Penalty Shot', 
-    description: 'Arms crossed over the head',
-    image: 'images/ref_penalty_shot.jpg'  
+    description: 'Arms crossed above head',
+    image: 'images/ref_penalty_shot.png'  
   }
 ];
 
