--- a/index.html
+++ b/index.html
@@ -3973,7 +3973,7 @@ return(
               
             </div>}
 
-           {activeTab === 'referee' && <div>
+          {activeTab === 'referee' && <div>
   <div className="grid grid-cols-3 md:grid-cols-4 lg:grid-cols-5 xl:grid-cols-6 gap-2 p-2">
     {refSigs.map((sig, i) => (
       <div 
@@ -3991,11 +3991,11 @@ return(
           modalDesc.textContent = sig.description;
         }}
       >
-        <div className="w-full aspect-square flex items-center justify-center">
+        <div className="w-full aspect-square flex items-center justify-center bg-gray-50 rounded">
           <img
             src={sig.image}
             alt={sig.name}
-            className="max-w-full max-h-full object-contain"
+            className="w-full h-full object-cover rounded"
           />
         </div>
         
