--- a/index.html
+++ b/index.html
@@ -2905,9 +2905,9 @@ const renderGoalieCard = (team, name, goals, saves) => {
 
 
  <div className={`min-h-screen ${darkMode?'bg-gray-900':'bg-gradient-to-br from-blue-50 to-blue-100'}`}>
-            <div className={`${darkMode?'bg-gray-800 border-b border-gray-700':'bg-gradient-to-r from-blue-600 to-blue-800'} text-white p-2 pb-1 shadow-lg sticky top-0 z-50`}>
+            <div className={`${darkMode?'bg-gray-800 border-b border-gray-700':'bg-gradient-to-r from-blue-600 to-blue-800'} text-white px-3 py-2 shadow-lg sticky top-0 z-50`}>
               <div className="max-w-7xl mx-auto">
-                <div className="flex justify-between items-center mb-3">
+  <div className="flex justify-between items-center">
                   <div className="flex gap-2 items-center flex-wrap">
 
     {[1,2,3].map(p=><button key={p} onClick={()=>{setCurrentPeriod(p);if(isMultiplayer&&matchRef.current&&!matchEnded)matchRef.current.update({currentPeriod:p})}} disabled={matchEnded||isViewer} className={`px-3 py-1 rounded font-bold ${currentPeriod===p?'bg-yellow-400 text-blue-900':darkMode?'bg-gray-700':'bg-white bg-opacity-20'}`}>{p}</button>)}
