--- a/index.html
+++ b/index.html
@@ -2008,9 +2008,9 @@ const renderPlayerTable=(team)=>{
               
 {!collapsedPlayerTables[team] && (
   <>
-    <div className="overflow-x-auto">
+    <div className="overflow-x-auto max-h-[60vh] overflow-y-auto">
       <table className={`w-full ${darkMode?'text-gray-200':''}`}>
-        <thead className={`${darkMode?'bg-gray-700 text-gray-200':'bg-gray-100'} sticky top-0 z-20`}>
+        <thead className={`${darkMode?'bg-gray-700 text-gray-200':'bg-gray-100'} sticky top-[1px] z-20`}>
           <tr>
             <th className={`px-2 py-2 text-left text-xs font-semibold sticky left-0 ${darkMode?'bg-gray-700 text-gray-200':'bg-gray-100'} z-10`}>#</th>
             {columnsToShow.map(col=>(
